# hfsdr

./: .gitmodules  AGENTS.md  README.md  audio_flowgraph.grc  audio_flowgraph.py  embedded_python_block_code.py
.cursor/plans/: led_pwm_timer_allocation_d15a9710.plan.md  usb_audio_in-out_path_26fdb374.plan.md
.github/workflows/: build-ch32v305-firmware.yml  deploy-ui-gh-pages.yml
art/: design1-outline.dxf
ch32v305/: .gitignore  CMakeLists.txt  README.md  build_wsl.sh
ch32v305/lib/Core/: core_riscv.h
ch32v305/lib/Ld/: Link.ld
ch32v305/src/: audio.c  ch32v30x_it.c  debug.c  main.c  main.cpp  main.h  syscalls.c  system_ch32v30x.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
ch32v305/src/demod/: am.cpp  demod.cpp  demod.h  demod_internal.h  fm.cpp  ssb.cpp
ch32v305/src/feature/blinky/: blinky.c  blinky.h
ch32v305/src/feature/fm_audio_out/: fm_audio_out.c  fm_audio_out.cpp  fm_audio_out.h
ch32v305/src/feature/iq_calibration/: iq_calibration.cpp  iq_calibration.h
ch32v305/src/hw/: adc.c  adc.h  dac.c  dac.h  dac_hw.c  dac_hw.h  dac_hw_sine_test.c  dac_hw_sine_test.h  encoder.c  encoder.h  i2c.cpp  i2c.h  i2c_hw.c  i2c_hw.cpp  i2c_hw.h  i2s.c  i2s.h  i2s_hw.c  i2s_hw.h  pinout.h  si5351.c  si5351.h  si5351_hw.c  si5351_hw.h  spi.c  spi.h  spi_hw.c  spi_hw.h  spi_manual.c  spi_manual.h  tlv320adc6120.c  tlv320adc6120.h  tlv320adc6120_hw.c  tlv320adc6120_hw.h  usb.c  usb.h  usb_hw.c  usb_hw.h  watchdog.c  watchdog.h
ch32v305/src/hw/display/: cst328.c  cst328.h  splash.c  splash.h  st7789.c  st7789.cpp  st7789.h
ch32v305/src/hw/sdcard/: bitbang.cpp  bitbang.h  sdcard.cpp  sdcard.h  sdio.cpp  sdio.h  types.h
ch32v305/src/hw/st7789/: st7789.c  st7789.h
ch32v305/src/signal/: fm_demod.c  fm_demod.h
ch32v305/src/test/: dac_hw_sine_test.c  dac_hw_sine_test.h  display_spi_test.c  display_spi_test.h  spi_gpio_pins.c  spi_gpio_pins.h
ch32v305/src/ui/: fft.c  fft.cpp  fft.h  ui.c  ui.cpp  ui.h
ch32v305/src/utils/: complex_dsp.cpp  complex_dsp.h  dsp.h  timer.h  utils.h
client-sw/flowgraphs/: hfsdr_webusb_demo.py
client-sw/gnuradio/examples/: embedded_python_block_code.py  fm_iq_record_to_file.grc  hfsdr_webusb_demo.py
client-sw/gnuradio/examples/basic_spectrum_iq/: basic_spectrum_iq.grc  basic_spectrum_iq.py  basic_spectrum_iq_epy_block_0.py
client-sw/gnuradio/examples/basic_waterfall/: basic_waterfall.grc  basic_waterfall.py  basic_waterfall_epy_block_0.py
client-sw/gnuradio/gr-hfsdr-lib/: README.md
client-sw/gnuradio/gr-hfsdr-lib/grc/: WARNING_UNTESTED.md  hfsdr_hfsdr_source.block.yml
client-sw/gnuradio/gr-hfsdr-lib/python/: __init__.py  hfsdr_source.py  hfsdr_usb.py
client-sw/gr-hfsdr/: README.md
client-sw/gr-hfsdr/grc/: hfsdr_hfsdr_source.block.yml
client-sw/gr-hfsdr/python/: hfsdr_source.py
client-sw/host/python/: hfsdr_probe.py  hfsdr_usb.py  requirements.txt
docs/: gnuradio_validation.md  host-guide.md  usb_driver_setup.md  webusb_vendor_protocol.md
hardware/: audio.kicad_sch  easyeda.kicad_sym  fp-info-cache  fp-lib-table  hfsdr.kicad_pcb  hfsdr.kicad_prl  hfsdr.kicad_pro  hfsdr.kicad_sch  power.kicad_sch  rf.kicad_sch  sym-lib-table
hardware/easyeda.3dshapes/: FPC-SMD_18P-P0.50_FPC-05F-18PH20.wrl  FPC-SMD_AFC07-S18ECA-00.wrl  SW-SMD_MST-22D18G4-WT.step  SW-SMD_MST-22D18G4-WT.wrl
hardware/easyeda.pretty/: AUDIO-SMD_PJ-320D.kicad_mod  ESOP-8_L4.9-W3.9-P1.27-LS6.0-BL-EP.kicad_mod  FPC-SMD_18P-P0.50_FPC-05F-18PH20.kicad_mod  FPC-SMD_AFC07-S18ECA-00.kicad_mod  SOIC-16_L9.9-W3.9-P1.27-LS6.0-BL.kicad_mod  SOT-23-5_L3.0-W1.7-P0.95-LS2.8-BR.kicad_mod  SW-SMD_MST-22D18G4-WT.kicad_mod  SW-TH_EC11XXXXXXXX.kicad_mod  TF-SMD_TF-018B-H15.kicad_mod
hardware/hfsdr/: hfsdr.kicad_prl  hfsdr.kicad_pro
hardware/jlcpcb/: .gitignore  project.db
hardware/tlv320aic6120/: 2025-06-21_15-05-27.kicad_sym
hardware/tlv320aic6120/footprints.pretty/: RTE0020A-MFG.kicad_mod  screen_ref.kicad_mod
scripts/: 99-hfsdr.rules  check-winusb-binding.ps1  i2s_serial_fft.py  iq_serial_demod.py  png_to_1bpp_c.py  serial_plot_rt.py
scripts/fm_demod_proto/: decode_recorded_iq.py  fm_demod_proto.c  fm_demod_testgen.py  fm_demod_validate.py
ui/: README.md  index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.svelte  app.css
ui/src/lib/: audio-output-worklet.js  control.js  data.js  fm-audio.js  spectrogram.js  webusb.js
